--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start" :"nodemon",
+    "start": "nodemon",
     "build": "babel src --out-dir dist",
     "test": "jest --coverage",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|jsx|ts|tsx|json)\"",
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
   }
 }
