--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mysql": "github:mysqljs/mysql",
     "nodemon": "^2.0.7",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
