feat: add new dotenv

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+MYSQL_ADDON_HOST=bngdibqz2edt7tg218kf-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=bngdibqz2edt7tg218kf
+MYSQL_ADDON_USER=ux2ypb175uss3dzd
+MYSQL_ADDON_PASSWORD=aSajliS7HrxtJtlY9OiA 
